--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@tailwindcss/vite": "^4.1.11",
     "aos": "^2.3.4",
     "emailjs-com": "^3.2.0",
+    "framer-motion": "^12.29.2",
     "lucide-react": "^0.555.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
